# sps

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dl4bi_sps/: gp.py  kernels.py  popgen.py  priors.py  si.py  sir.py  utils.py
examples/: build_popgen_dataset.py  cloud_cover_masks.py  lattice_si.py  lattice_sir.py  plot_2d_kernels.py  popgen.py  visualize_popgen.py
scripts/: release.py
sps/: gp.py  kernels.py  popgen.py  priors.py  si.py  sir.py  utils.py
sps/simulators/: gp.py  kernels.py  priors.py  shared_types.py
tests/: test_gp.py  test_popgen.py  test_si.py  test_sir.py
