[tool.poetry]
name = "sps"
version = "0.1.0"
description = "Stochastic Process Simulators"
authors = ["Daniel Jenson <daniel.a.jenson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
