[tool.poetry]
name = "sps"
version = "0.1.1"
description = "Stochastic Process Simulators"
authors = ["Daniel Jenson <daniel.a.jenson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-benchmark = "^5.1.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
