[project]
name = "dl4bi-sps"
version = "0.1.1"
description = "Deep Learning for Bayesian Inference: Stochastic Process Simulators"
authors = [{ name = "Daniel Jenson", email = "daniel.a.jenson@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = []

[project.optional-dependencies]
cpu = [
    "jax>=0.8.1,<0.9",
]
cuda12 = [
    "jax[cuda12]>=0.8.1,<0.9",
]
cuda13 = [
    "jax[cuda13]>=0.8.1,<0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "pytest-benchmark>=5.1.0,<6",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda12" },
        { extra = "cuda13" },
    ],
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.setuptools.packages.find]
include = ["sps*"]
exclude = ["tests*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
